[project]
name = "foundry"
version = "0.1.0"
description = "An interactive CLI for managing Blue Lobster VMs (and, later, an automated open-source contribution pipeline)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
]

[project.scripts]
foundry = "foundry.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foundry"]
